# PhantomClaw

./: .env.example  .gitignore  .gitleaks.toml  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  automation_analytics.py  automation_catalog.py  package.json  phantomclaw_bundle.py  phantomclaw_codex_migration.py  pyproject.toml  run_lock.py  vercel.json
docs/: automation-standard-format.md  control-plane-contract.md  open-source-launch.md  product-topology.md
landing/: index.html  privacy.html  script.js  styles.css  terms.html
linkedin/: __init__.py
linkedin_sales_community/: __init__.py  browser_use_client.py  runner.py
peerlist/: __init__.py
schemas/: phantomclaw.run-bundle.v1.schema.json
scripts/: backfill_automation_names.py  export_run_bundle.py  install_phantomclaw_scheduler_launchd.py  migrate_codex_automations_to_phantomclaw.py  phantomclaw-run-due-automations.mjs  phantomclaw_dispatch_migrated_automation.py  phantomclaw_run_due_automations.py  run_peerlist_follow_http.py  upsert_daily_metric.py
tests/: test_automation_analytics.py  test_automation_catalog.py  test_browser_use_client.py  test_company_profile_config.py  test_linkedin_sales_community.py  test_linkedin_sales_community_browser_use_client.py  test_linkedin_sales_community_runner.py  test_parser.py  test_peerlist_browser_use_agent.py  test_peerlist_bundle_manifest.py  test_peerlist_follow_http.py  test_phantomclaw_bundle.py  test_phantomclaw_codex_migration.py  test_phantomclaw_due_scheduler.py  test_run_lock.py  test_runner.py  test_state.py
(+60 files in other folders)
