[project]
name = "phantomclaw"
version = "0.1.0"
description = "PhantomClaw open-source core for fail-closed browser automations and normalized analytics"
requires-python = ">=3.14"
dependencies = [
    "browser-use-sdk>=3.4.3",
    "psycopg[binary]>=3.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
